force-app/main/default/objects/User_Story_Requirement__c/User_Story_Requirement__c.object-meta.xml
<CustomObject>
    <label>User Story Requirement</label>
    <nameField>
        <displayFormat>USR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>