force-app/main/default/objects/User_Story_Requirement__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <referenceTo>Requirements__c</referenceTo>
    <relationshipLabel>User Story Requirements</relationshipLabel>
    <relationshipName>User_Story_Requirements1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>