force-app/main/default/objects/User_Story_Requirement__c/fields/Requirement_ForceDev_SB_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_ForceDev_SB_SF_ID__c</fullName>
    <description>Salesforce ID from the ForceDev Sandbox for matching up records</description>
    <externalId>true</externalId>
    <label>Requirement ForceDev SB SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>