force-app/main/default/objects/User_Story_Requirement__c/fields/Requirement_Link__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Requirement__c, Requirement__r.Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement (Link)</label>
    <type>Text</type>
</CustomField>