force-app/main/default/objects/User_Story_Requirement__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <formula>TEXT( Requirement__r.Track__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track</label>
    <type>Text</type>
</CustomField>