force-app/main/default/objects/User_Story_Requirement__c/listViews/Customer_Support.listView-meta.xml
<ListView>
    <fullName>Customer_Support</fullName>
    <columns>Track__c</columns>
    <columns>User_Story__c</columns>
    <columns>Requirement__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>equals</operation>
        <value>Customer Support</value>
    </filters>
    <label>Customer Support</label>
    <language>en_US</language>
</ListView>