force-app/main/default/objects/User_Story_Requirement__c/listViews/Marketing.listView-meta.xml
<ListView>
    <fullName>Marketing</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Link__c</columns>
    <columns>User_Story__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track__c</field>
        <operation>contains</operation>
        <value>Marketing</value>
    </filters>
    <label>Marketing</label>
    <language>en_US</language>
</ListView>